--- a/teapot/package.json
+++ b/teapot/package.json
@@ -1,7 +1,6 @@
 {
   "name": "teapot",
-  "version": "1.0.0",
-  "private": false,
+  "version": "1.1.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -26,6 +25,6 @@
   },
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
   "main": "postcss.config.js",
-  "author": "",
+  "author": "iblitzc0de",
   "license": "ISC"
 }
